	  Contributed by Gary Teravskis,
 
6.17 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/sure-pic32mx: Add support for the Sure DB-DP11212 PIC32 General
	  Purpose Demo Board
	* arch/arm/src/stm32/stm32_usbhost.c/.h:  Add files that will (eventually)
	  hold an STM32 USB host driver (the initial check-in is the NuttX LPC17
	  USB host driver with name changes only).
	* arch/arm/src/stm32/chip/stm32_otgfs.h:  STM32 USB OTG FS register
	  definitions (not complete on initial check-in).
	* net/connect.c:  Add another low level, thread-independent socket interface
	  for use within the OS.
	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  The PIC32 Ethernet driver
	  is now stable on the PIC32 Starter Kit.
	* configs/pic32-starterkit/nsh2:  Add a PIC32 Ethernet Starter Kit NSH
	  configuration that has no serial console; all interaction is done via
	  Telnet.
	* net/netdev_sem.c:  Correct a deadlock condition by making a seamphore
	  recursive.  To my knowledge this deadlock only occurs when running the
	  NSH command ifconfig over Telnet.  In that case the function netdev_foreach
	  takes the network device semaphore, but so does the telnet logic causing
	  the deadlock.
	* arch/arm/src/stm32/stm32_pm*.c: Add basic STM32 power management logic
	  that will eventually be used to implement low power states.
	* arch/arm/src/stm32/stm32f*0xx_rcc.c:  In order to use CAN2, both CAN1 and
	  CAN2 clocking must be enabled.
	* arch/mips/src/pic32mx/picm32mx-usbdev.c:  Several stall-related fixes so that
	  the USB device driver can used the the mass storage class (which does a LOT
	  of stalling as part of its normal protocol).  The PIC32 USB Mass Storage
	  device is, however, still non-functional when debug is OFF.
	* include/nuttx/fs: Move all file-system related files from include/nuttx to
	  include/nuttx/fs.
	* include/nuttx/serial: Move all serial-driver related files from include/nuttx to
	  include/nuttx/serial.